@@ -1,3 +1,7 @@
+2006-02-23  Jörg Höhle  <hoehle@users.sourceforge.net>
+
+	* socket.tst: tests with '(unsigned-byte 8) element-type
+
 2006-02-03  Jörg Höhle  <hoehle@users.sourceforge.net>
 
 	* ffi.tst: foreign-address<->unsigned were broken on [WIDE]
